--- a/sommarlov.html
+++ b/sommarlov.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Sommarlovsnedräknaren</title>
 <style>
 p {
   text-align: center;
@@ -17,7 +18,7 @@ p {
   justify-content: center;
 }
 body {
-  background-image: url('https://static-cdn.sr.se/sida/images/98/3545472.jpg?preset=768x432');
+  background-image: url('https://cdn.pixabay.com/photo/2017/09/23/17/26/lake-2779542_960_720.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
