--- a/sommarlov.html
+++ b/sommarlov.html
@@ -22,6 +22,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  background-position: center;
 }
 </style>
 </head>
