--- a/sommarlov.html
+++ b/sommarlov.html
@@ -9,7 +9,7 @@ p {
   text-align: center;
   font-style: italic;
   font-size: 10vw;
-  color: white;
+  color: lawngreen;
   margin-top: 0px;
   height: 100%;
   width: 100%;
