--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ p {
   text-shadow: 3px 2px white;
 }
 body {
-  /*bakgrund.jpg*/
-  background-image: url('https://www.publicdomainpictures.net/pictures/230000/nahled/watercolor-rainbow-wash-1501083933Xu4.jpg');
+  /**/
+  background-image: url('bakgrund.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
